refactor: update config file formatting, update template

--- a/config/datasets/CPTAC-PDA.yaml
+++ b/config/datasets/CPTAC-PDA.yaml
@@ -23,11 +23,11 @@ MIT:
 ### READII settings
 READII:
     IMAGE_TYPES:
-        regions:
+        regions: []
 
-        permutations:
+        permutations: []
 
-        crop:
+        crop: []
 
 ### Feature Extraction settings
 EXTRACTION:
