--- a/config/datasets/CPTAC-HNSCC.yaml
+++ b/config/datasets/CPTAC-HNSCC.yaml
@@ -17,8 +17,7 @@ MIT:
         image: CT
         mask: RTSTRUCT
     ROI_STRATEGY: SEPARATE
-    ROI_MATCH_MAP: # NOTE: there can be no spaces in KEY:ROI_NAME
-        "GTV:.*"
+    ROI_MATCH_MAP: "GTV:.*"
 
 ### READII settings
 READII:
