build: downgrade to Python 3.11 to use MIT

--- a/pixi.toml
+++ b/pixi.toml
@@ -21,7 +21,7 @@ env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
 env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
 
 [dependencies]
-python = ">=3.12,<3.13"
+python = "3.11.*"
 pip = "*"
 ipython = "*"
 ipykernel = "*"
