--- a/config/datasets/dataset_config_template.yaml
+++ b/config/datasets/dataset_config_template.yaml
@@ -26,8 +26,10 @@ READII:
         regions:
             - "roi"
         permutations:
-            - "sampled"
-        crop: []
+            - "shuffled"
+        crop:
+            - "cube"
+        resize: 50 # [50, 50, 50]
 
 ### Feature Extraction settings
 EXTRACTION:
