feat: add crop and resize to all config files

--- a/config/datasets/CC-Radiomics-Phantom.yaml
+++ b/config/datasets/CC-Radiomics-Phantom.yaml
@@ -31,6 +31,8 @@ READII:
             - "sampled"
             - "shuffled"
         crop:
+            
+        resize: []
     
 ### Feature Extraction settings
 EXTRACTION:
