--- a/config/datasets/CPTAC-HNSCC.yaml
+++ b/config/datasets/CPTAC-HNSCC.yaml
@@ -25,6 +25,8 @@ READII:
         regions:
         permutations:
         crop:
+             
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
