--- a/config/datasets/CPTAC-UCEC.yaml
+++ b/config/datasets/CPTAC-UCEC.yaml
@@ -25,7 +25,9 @@ READII:
     IMAGE_TYPES:
         regions: []
         permutations: []
-        crop: []
+        crop:
+             
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
