--- a/config/datasets/HNSCC.yaml
+++ b/config/datasets/HNSCC.yaml
@@ -32,6 +32,7 @@ READII:
             - "sampled"
             - "randomized"
         crop:
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
