--- a/config/datasets/NSCLC-Radiomics.yaml
+++ b/config/datasets/NSCLC-Radiomics.yaml
@@ -27,7 +27,8 @@ READII:
             - "roi"
         permutations:
             - "shuffled"
-        crop:
+        crop:   
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
