--- a/config/datasets/RADCURE.yaml
+++ b/config/datasets/RADCURE.yaml
@@ -28,7 +28,8 @@ READII:
     IMAGE_TYPES: 
         regions: []
         permutations: []
-        crop: []
+        crop:
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
