--- a/config/datasets/NSCLC-Radiogenomics.yaml
+++ b/config/datasets/NSCLC-Radiogenomics.yaml
@@ -25,7 +25,8 @@ READII:
     IMAGE_TYPES:
         regions:
         permutations:
-        crop:
+        crop:     
+        resize: []
 
 
 ### Feature Extraction settings
