--- a/config/datasets/TCGA-KIRC.yaml
+++ b/config/datasets/TCGA-KIRC.yaml
@@ -28,6 +28,8 @@ READII:
         permutations:
             
         crop:
+             
+        resize: []
 
 ### Feature Extraction settings
 EXTRACTION:
