--- a/pixi.toml
+++ b/pixi.toml
@@ -21,18 +21,12 @@ env.RESULTS = "${PIXI_PROJECT_ROOT}/data/results"
 env.SCRIPTS = "${PIXI_PROJECT_ROOT}/workflow/scripts"
 
 [dependencies]
-python = ">=3.12,<3.13"
+python = "<3.12"
 pip = "*"
 ipython = "*"
 ipykernel = "*"
 jupyterlab = "*"
 ipywidgets = ">=8.1.7,<9"
-# numpy = ">=2.2.5,<3"
-# scikit-learn = ">=1.6.1,<2"
-# scikit-survival = ">=0.24.1,<0.25"
-# openpyxl = ">=3.1.5,<4"
-# snakemake = ">=9.4.0,<10"
-# click = ">=8.2.1,<9"
 pyvista = ">=0.46.1,<0.47"
 trame = ">=3.11.0,<4"
 trame-vuetify = ">=3.0.2,<4"
@@ -40,8 +34,6 @@ trame-vtk = ">=2.9.1,<3"
 
 [pypi-dependencies]
 readii_2_roqc = { path = ".", editable = true }
-# readii = ">=1.36.1, <2"
-# damply = ">=0.10.0, <0.11"
 
 
 [tasks]
