refactor: update template to have empty readii settings

--- a/config/datasets/dataset_config_template.yaml
+++ b/config/datasets/dataset_config_template.yaml
@@ -24,12 +24,9 @@ MIT:
 READII:
     IMAGE_TYPES:
         regions:
-            - "roi"
         permutations:
-            - "shuffled"
         crop:
-             
-        resize: [] # [50, 50, 50]
+        resize: 
 
 ### Feature Extraction settings
 EXTRACTION:
