--- a/pixi.toml
+++ b/pixi.toml
@@ -105,7 +105,7 @@ args = ["dataset",
         "features", 
         "signature",
         {arg = "bootstrap", default = '1000'},
-        {arg = "split", default = 'NONE'}]
+        {arg = "split", default = 'None'}]
 cwd = "src/readii_2_roqc/analysis"
 cmd = ["python",
        "predict.py",
@@ -119,7 +119,7 @@ cmd = ["python",
 [tasks.plot_predict]
 args = ["dataset", 
         "signature",
-        {arg = "split", default = 'NONE'},
+        {arg = "split", default = 'None'},
         {arg = "overwrite", default = "false"}]
 cwd = "src/readii_2_roqc/visualization"
 cmd = ["python",
