--- a/pixi.toml
+++ b/pixi.toml
@@ -100,6 +100,27 @@ cmd = ["python",
        "--jobs", "{{ jobs }}"
 ]
 
+[tasks.fit-model]
+args = ["dataset",
+        "features",
+        "model",
+        {arg = "signature", default = 'None'},
+        {arg = "split", default = 'None'},
+        {arg = "image_type", default = "original_full"},
+        {arg = "overwrite", default = 'False'}
+       ]
+cwd = "src/readii_2_roqc/analysis"
+cmd = ["python",
+       "fit_model.py",
+       "{{ dataset }}",
+       "{{ features }}",
+       "{{ model }}",
+       "--signature", "{{ signature }}",
+       "--split", "{{ split }}",
+       "--image_type", "{{ image_type}}", 
+       "--overwrite", "{{ overwrite }}"
+]
+
 [tasks.predict]
 args = ["dataset", 
         "features", 
