refactor: change underscore to dash in plot predict pixi task

--- a/pixi.toml
+++ b/pixi.toml
@@ -137,7 +137,7 @@ cmd = ["python",
        "--split", "{{ split }}"
        ]
 
-[tasks.plot_predict]
+[tasks.plot-predict]
 args = ["dataset", 
         "signature",
         {arg = "split", default = 'None'},
