--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "scikit-survival>=0.24.1,<0.25",
     "openpyxl>=3.1.5,<4",
     "click>=8.2.1,<9",
-    "damply>=0.10.0, <0.11"
+    "damply>=0.26.0"
 ]
 
 [project.scripts]
