--- a/pixi.toml
+++ b/pixi.toml
@@ -34,6 +34,7 @@ trame-vtk = ">=2.9.1,<3"
 
 [pypi-dependencies]
 readii_2_roqc = { path = ".", editable = true }
+pyradiomics = { git = "https://github.com/AIM-Harvard/pyradiomics.git" }
 
 
 [tasks]
