fix: correct elements of TCGA-KIRC config

--- a/config/datasets/TCGA-KIRC.yaml
+++ b/config/datasets/TCGA-KIRC.yaml
@@ -1,5 +1,5 @@
-DATA_SOURCE: "TCGA-KIRC"
-DATASET_NAME: "TCIA"
+DATA_SOURCE: "TCIA"
+DATASET_NAME: "TCGA-KIRC"
 
 ### CLINICAL VARIABLE INFORMATION ###
 CLINICAL:
@@ -16,8 +16,8 @@ MIT:
     MODALITIES: 
         image: CT
         mask: 
-    ROI_STRATEGY: MERGE
-    ROI_MATCH_MAP: KEY:ROI_NAME # NOTE: there can be no spaces in KEY:ROI_NAME and right now there can only be one KEY
+    ROI_STRATEGY: SEPARATE
+    ROI_MATCH_MAP: ROI:GTV_.* # NOTE: there can be no spaces in KEY:ROI_NAME and right now there can only be one KEY
         
 
 ### READII settings
